# This is a dummy Makefile.am to get automake work flawlessly,
# and also cooperate to make a distribution for `make dist'

EXTRA_DIST = ANNOUNCE HOWTO LICENSE LSM README \
 README.limits README.linux README.mirrors README.nls README.pam \
 README.platforms README.sun4 WISHLIST console.c.spec.txt cracklib26.diff
